# public/openapi.json
@@ -4021,214 +4021,6 @@
         }
       }
     },
-    "/organizations/{id}/sso": {
-      "delete": {
-        "tags": [
-          "Organizations"
-        ],
-        "summary": "Delete sso",
-        "operationId": "deleteOrganizationSso",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Id ID",
-            "required": true,
-            "schema": {
-              "$defs": {
-                "UUID": {
-                  "type": "string",
-                  "description": "a Universally Unique Identifier",
-                  "format": "uuid",
-                  "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-                }
-              },
-              "$ref": "#/$defs/UUID"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "Organizations"
-        ],
-        "summary": "Get sso",
-        "operationId": "getOrganizationSso",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Id ID",
-            "required": true,
-            "schema": {
-              "$defs": {
-                "UUID": {
-                  "type": "string",
-                  "description": "a Universally Unique Identifier",
-                  "format": "uuid",
-                  "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-                }
-              },
-              "$ref": "#/$defs/UUID"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        }
-      },
-      "patch": {
-        "tags": [
-          "Organizations"
-        ],
-        "summary": "Patch sso",
-        "operationId": "patchOrganizationSso",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Id ID",
-            "required": true,
-            "schema": {
-              "$defs": {
-                "UUID": {
-                  "type": "string",
-                  "description": "a Universally Unique Identifier",
-                  "format": "uuid",
-                  "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-                }
-              },
-              "$ref": "#/$defs/UUID"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Organizations"
-        ],
-        "summary": "Create sso",
-        "operationId": "createOrganizationSso",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Id ID",
-            "required": true,
-            "schema": {
-              "$defs": {
-                "UUID": {
-                  "type": "string",
-                  "description": "a Universally Unique Identifier",
-                  "format": "uuid",
-                  "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-                }
-              },
-              "$ref": "#/$defs/UUID"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created successfully"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        }
-      }
-    },
-    "/organizations/{id}/storage": {
-      "get": {
-        "tags": [
-          "Organizations"
-        ],
-        "summary": "Get storage",
-        "operationId": "getOrganizationStorage",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Id ID",
-            "required": true,
-            "schema": {
-              "$defs": {
-                "UUID": {
-                  "type": "string",
-                  "description": "a Universally Unique Identifier",
-                  "format": "uuid",
-                  "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-                }
-              },
-              "$ref": "#/$defs/UUID"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "Organizations"
-        ],
-        "summary": "Update storage",
-        "operationId": "updateOrganizationStorage",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Id ID",
-            "required": true,
-            "schema": {
-              "$defs": {
-                "UUID": {
-                  "type": "string",
-                  "description": "a Universally Unique Identifier",
-                  "format": "uuid",
-                  "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
-                }
-              },
-              "$ref": "#/$defs/UUID"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "404": {
-            "description": "Not found"
-          }
-        }
-      }
-    },
     "/organizations/slug/{slug}": {
       "get": {
         "tags": [
@@ -8216,6 +8008,84 @@
         "responses": {
           "201": {
             "description": "Created successfully"
+          },
+          "404": {
+            "description": "Not found"
+          }
+        }
+      }
+    },
+    "/videos/{id}/presence": {
+      "get": {
+        "tags": [
+          "Videos"
+        ],
+        "summary": "Get presence",
+        "operationId": "getVideoPresence",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id ID",
+            "required": true,
+            "schema": {
+              "$defs": {
+                "UUID": {
+                  "type": "string",
+                  "description": "a Universally Unique Identifier",
+                  "format": "uuid",
+                  "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
+                }
+              },
+              "$ref": "#/$defs/UUID"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "404": {
+            "description": "Not found"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Videos"
+        ],
+        "summary": "Create presence",
+        "operationId": "createVideoPresence",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id ID",
+            "required": true,
+            "schema": {
+              "$defs": {
+                "UUID": {
+                  "type": "string",
+                  "description": "a Universally Unique Identifier",
+                  "format": "uuid",
+                  "pattern": "^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$"
+                }
+              },
+              "$ref": "#/$defs/UUID"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not found"
